[package]
name = "example"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
sdl2 = { version = "0.32.1", optional = true }
gl = { version = "0.11.0", optional = true }

imgui = "0.0.22"
imgui-ext = { version = "0.1.4", path = "../" }

[dependencies.imgui-sdl2]
git = "https://github.com/germangb/rust-imgui-sdl2.git"
branch = "imgui-22"
optional = true

[dependencies.imgui-opengl-renderer]
git = "https://github.com/germangb/rust-imgui-opengl-renderer.git"
branch = "imgui-22"
optional = true

[features]
default = ["sdl"]
sdl = ["sdl2", "imgui-sdl2", "imgui-opengl-renderer", "gl"]
ci = []
