[package]
name = "example"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
sdl2 = { version = "0.32.1", features = ["bundled"], optional = true }
gl = { version = "0.12.0", optional = true }

imgui = "0.0.23"
imgui-ext = { version = "0.2.0", path = "../" }

imgui-sdl2 = { version = "0.5.0", optional = true }
imgui-opengl-renderer = { version = "0.4.0", optional = true }

[dev-dependencies]
nalgebra-glm = "0.4.0"

[features]
default = ["sdl"]
sdl = ["sdl2", "imgui-sdl2", "imgui-opengl-renderer", "gl"]
ci = []
