[package]
name = "imgui-ext-derive"
version = "0.3.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"
description = "Procedural macro for the imgui-ext crate."
repository = "https://github.com/germangb/imgui-ext"
keywords = ["gui", "imgui", "macro"]
categories = ["gui", "api-bindings", "game-engines"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.1", features = ["derive"]}
quote = "1.0.0"
proc-macro2 = "1.0.0"
failure = "0.1.5"