[package]
name = "imgui_ext_derive"
version = "0.1.0"
authors = ["german gomez <germangb42@gmail.com>"]
edition = "2018"

[workspace]
members = ["modules/derive", "modules/traits"]

[lib]
proc-macro = true

[dependencies]
imgui_ext_traits = { path = "../traits" }
syn = {version = "0.15.18", features = ["derive"]}
quote = "0.6.9"
proc-macro2 = "0.4.20"
